drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - image: bitnami/drupal
        name: drupal
        ports:
        - containerPort: 8080
          name: drupal
        volumeMounts:
        - name: drupal-storage
          mountPath: /var/www/html/modules
          subPath: modules
        - name: drupal-storage
          mountPath: /var/www/html/profiles
          subPath: profiles
        - name: drupal-storage
          mountPath: /var/www/html/sites
          subPath: sites
        - name: drupal-storage
          mountPath: /var/www/html/themes
          subPath: themes
        - name: drupal-storage
          mountPath: /var/www/html/sites/default/files/config
          subPath: config
      volumes:
      - name: drupal-storage
        persistentVolumeClaim:
          claimName: drupal-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: drupal
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: drupal
  type: ClusterIP
