drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - reto2-toptel.site
    secretName: reto2-toptel-site-tls
  rules:
  - host: reto2-toptel.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal
            port:
              number: 80
